--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,37 +9,26 @@ nav
     display: flex;
     flex-direction: row;
 }
+.lineshop
+{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.lineshop:hover 
+{
+    text-decoration: none;
+    color: rgb(115,183,63);
+}
 .phrase
 {
     margin-left: 10px;
     padding-top: 8px;
 }
-
-.panier
-{
-    display: flex;
-    flex-direction: row;
-}
 .sectionPanier
 {
     margin-right: 10px;
 }
-.cadie
-{
-    margin-right: 10px;
-    display: flex;
-    align-items: center;
-}
-.qtePanier, .totalPanier
-{
-    text-align: center;
-}
-h3
-{
-    text-transform: uppercase;
-    font-size: 16px;
-    color: rgb(148,204,85);
-}
+
 /* Bandeau de session */
 
 .session
@@ -179,12 +168,6 @@ h3
     color: rgba(0,0,0,0.7);
 }
 
-.tamere
-{
-   width: 100px;
-   height: 30px;
-   background-color: black;
-}
 .liens
 {
     text-decoration: none;
