--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -47,7 +47,7 @@
           <tr>
             <td colspan="3" class="text-right">Total du panier :</td>
             <td>{{ total }} €</td>
-            <td> <a class="btn btn-primary btn-sm" href="#" role="button">Valider la commande</a></td>
+            <td> <a class="btn btn-sm lienCate" href="#" role="button">Valider la commande</a></td>
           </tr>
         </tfoot>
       </table>
