--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container mt-5">
         <h1>Register</h1>
 
         {{ form_start(registrationForm) }}
@@ -11,7 +11,7 @@
             {{ form_row(registrationForm.email) }}
             {{ form_row(registrationForm.plainPassword) }}
             {{ form_row(registrationForm.agreeTerms) }}
-            <button class="btn btn-primary">Register</button>
+            <button class="btn btn-md lienCate">Register</button>
 
         {{ form_end(registrationForm) }}
     </div>
