--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container mt-5">
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -22,7 +22,7 @@
         <input type="password" name="password" id="inputPassword" class="form-control" required>
 
         <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
+            value="{{ csrf_token('authenticate') }}" 
         >
 
         {#
@@ -36,7 +36,7 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary mt-3" type="submit">
+        <button class="btn btn-md lienCate mt-3" type="submit" >
             Sign in
         </button>
     </form>
